--- a/web/src/app/components/form-clanes/form-clanes.component.html
+++ b/web/src/app/components/form-clanes/form-clanes.component.html
@@ -14,7 +14,9 @@
             <form (submit)="guardarClan()">
               <div class="form-group">
                 <label for="lider">Líder</label>
-                <input type="number" class="form-control" id="lider" name="lider" >
+                <select name="" id="" class="form-select">
+                  
+                </select>
               </div>
               <div class="form-group">
                 <label for="nombre">Nombre</label>
