--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -32,6 +32,10 @@
                     </div>
                 </div>
 
+                <div class="alert alert-danger fade show" role="alert" *ngIf="errorMessage">
+                    {{ errorMessage }}
+                </div>
+
                 <button type="submit" class="btn" [disabled]="formGroup.invalid || isLoading">INICIAR SESIÓN</button>
                 <p>No tienes cuenta? <a routerLink="/registrar">Registrate</a></p>
             </form>
@@ -39,7 +43,3 @@
     </div>
 </body>
 </html>
-
-@if(errorMessage){
-    <p> {{errorMessage}}</p>
-} 
