--- a/web/src/app/components/view-inventario/view-inventario.component.html
+++ b/web/src/app/components/view-inventario/view-inventario.component.html
@@ -13,10 +13,10 @@
             <div class="card text-bg-light mt-3" style="max-width: 18rem;">
                 <div class="card-header">Arma</div>
                 <div class="card-body">
-                    <h5 class="card-title">{{ inventario[0].arma.nombre }}</h5>
-                    <p class="card-text">Tipo: {{ inventario[0].arma.tipo }}</p>
-                    <p class="card-text">Rareza: {{ inventario[0].arma.rareza }}</p>
-                    <p class="card-text">Daño: {{ inventario[0].arma.danio_base }} de daño</p>
+                    <h5 class="card-title">{{ inventario.arma.nombre }}</h5>
+                    <p class="card-text">Tipo: {{ inventario.arma.tipo }}</p>
+                    <p class="card-text">Rareza: {{ inventario.arma.rareza }}</p>
+                    <p class="card-text">Daño: {{ inventario.arma.danio_base }} de daño</p>
                     <a routerLink="/ver-armas" class="card-link">Cambiar arma</a>
                 </div>
             </div>
@@ -25,10 +25,10 @@
             <div class="card text-bg-secondary mt-3" style="max-width: 18rem;">
                 <div class="card-header">Heroe</div>
                 <div class="card-body">
-                    <h5 class="card-title">{{ inventario[0].heroe.nombre }}</h5>
-                    <p class="card-text">Tipo: {{ inventario[0].heroe.tipo }}</p>
-                    <p class="card-text">Rareza: {{ inventario[0].heroe.rareza }}</p>
-                    <p class="card-text">Habilidad: {{ inventario[0].heroe.habilidad_especial }}</p>
+                    <h5 class="card-title">{{ inventario.heroe.nombre }}</h5>
+                    <p class="card-text">Tipo: {{ inventario.heroe.tipo }}</p>
+                    <p class="card-text">Rareza: {{ inventario.heroe.rareza }}</p>
+                    <p class="card-text">Habilidad: {{ inventario.heroe.habilidad_especial }}</p>
                     <a routerLink="/ver-heroes" class="card-link">Cambiar heroe</a>
                 </div>
             </div>
