--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -13,10 +13,10 @@
             
             <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
 
-            <form class="form" [formGroup]="formGroup" (submit)="onSubmit($event)" [class.disabled]="isLoading">
+            <form class="form" [formGroup]="formGroup" (submit)="onSubmit($event)" >
                 <div class="mb-3">
                     <label for="">Correo</label>
-                    <input type="email" formControlName="email" name="email" id="email" class="form-control" [class.is-invalid]="email.invalid && (email.dirty || email.touched)" [class.disabled]="isLoading">
+                    <input type="email" formControlName="email" name="email" id="email" class="form-control" [class.is-invalid]="email.invalid && (email.dirty || email.touched)" [disabled]="isLoading">
                     <div [hidden]="email.valid || email.pristine">
                         <span class="text-danger" *ngIf="email.errors?.['required']">El correo es obligatorio</span>
                         <span class="text-danger" *ngIf="email.errors?.['email']">El formato del correo no es valido</span>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="">Contraseña</label>
-                    <input type="password" formControlName="password" name="password" id="password" class="form-control" [class.is-invalid]="password.invalid && (password.dirty || password.touched)" [class.disabled]="isLoading">
+                    <input type="password" formControlName="password" name="password" id="password" class="form-control" [class.is-invalid]="password.invalid && (password.dirty || password.touched)" [disabled]="isLoading">
                     <div [hidden]="password.valid || password.pristine">
                         <span class="text-danger" *ngIf="password.errors?.['required']">La contraseña es obligatoria</span>
                         <span class="text-danger" *ngIf="password.errors?.['minlength']">La contraseña debe ser de mínimo 8 caracteres</span>
